2001-12-13  Ulrich Drepper  <drepper@redhat.com>

	* crypt/md5.c (md5_process_bytes): Correct handling of alignment.
	Patch by Eric Sharkey <sharkey@netrics.com>.

	* crypt/md5test.c (main): Add test for multiple calls to
	__md5_process_bytes to itererate over input string.

2001-12-12  Ulrich Drepper  <drepper@redhat.com>

	* nis/nis_findserv.c (__nis_findfastest_with_timeout): Mostly the code
	from __nis_findfastest.  Take timeout value from parameter.
	(__nis_findfastest): Call __nis_findfastest_with_timeout repeatedly.
	* nis/nis_intern.h: Define parameters controlling __nis_findfastest
	[PR libc/2520].  Patch by Alexander Belopolsky <alexb@rentec.com>.

2001-12-12  Andreas Jaeger  <aj@suse.de>

	* configure.in: Use -nostartfiles -nostdlib for linker tests, fix
	combreloc test so that it works in this case.

	* sysdeps/arm/dl-machine.h (elf_machine_rela): Fix typo in last patch.

2001-12-12  NIIBE Yutaka  <gniibe@m17n.org>

	* sysdeps/sh/Makefile: New file.
	* sysdeps/sh/_mcount.S: New file.
	* sysdeps/sh/sysdep.h (CALL_MCOUNT): Implemented.
	* sysdeps/sh/machine-gmon.h: Remove "NOTYET" comment, as we are ready.

2001-12-11  Ulrich Drepper  <drepper@redhat.com>

	* resolv/nss_dns/dns-host.c (getanswer_r): Remove MAX_NR_ADDRS
	limitation [PR libc/2564].

2001-12-11  Jakub Jelinek  <jakub@redhat.com>

	* elf/Makefile (dl-routines): Add conflict.
	(rtld-ldscript-in, rtld-ldscript, rtld-parms): Remove.
	(ld.so): Add _begin local symbol.
	* elf/elf.h (DT_VALTAGIDX, DT_VALNUM, DT_ADDRTAGIDX, DT_ADDRNUM):
	Define.
	* elf/dl-deps.c (_dl_build_local_scope): New.
	(_dl_map_object_deps): If LD_TRACE_PRELINKING, compute local scopes
	of all libraries.
	* elf/do-rel.h (VALIDX): Define.
	(elf_dynamic_do_rel): If ELF_MACHINE_PLT_REL is defined, don't do
	lazy binding for RELA.  If DT_GNU_PRELINKED, DT_RELACOUNT relocations
	can be skipped.
	* elf/dl-conflict.c: New file.
	* elf/dl-lookup.c (_dl_debug_bindings): New.